--- a/dnwsite/index.html
+++ b/dnwsite/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="./public/common.css">
+  <link rel="stylesheet" href="./public/index.css">
 </head>
 <body>
   <div class="container">
@@ -13,33 +14,53 @@
         <!-- <img src="./public/imgs/applog.png" alt=""> -->
       </div>
       <ul class="pagelist">
-        <li>首页</li>
-        <li>直播</li>
-        <li>关于我们</li>
+        <li>
+          <a href="#">首页</a>
+        </li>
+        <li><a href="#">观看直播</a></li>
+        <li><a href="#">关于我们</a></li>
       </ul>
     </div>
     <div class="content-warp">
-      <div class="warp-area">
+      <div class="warp-area" id="warpid">
         <div class="downbox">
-          <div>视生活APP</div>
-          <div>带你看生活，带你看世界</div>
+          <div class="title">视生活APP</div>
+          <div class="title-docs">带你看生活，带你看世界</div>
           <div class="rwcode">
-            <div class="ios-code">
-              <div class="code-img"></div>
-              <div class="code-text">扫描下载</div>
+            <div class="code">
+              <div class="code-ios">
+                <img src="./public/imgs/iosCode.png" alt="ios">
+              </div>
+              <div class="code-text">
+                <div class="icon icon-ios">
+                  <img src="./public/imgs/iconIos.png" alt="">
+                </div>
+                <span>ios</span>扫描下载
+              </div>
+              <div class="btn-ios">
+                <img src="./public/imgs/iconIos.png" alt="">
+                <span>ios</span> 下载
+              </div>
             </div>
-            <div class="andr-code">
-              <div class="code-img"></div>
-              <div class="code-text">扫描下载</div>
+            <div class="code ">
+              <div class="code-andr">
+                <img src="./public/imgs/wxCode.png" alt="android">
+              </div>
+              <div class="code-text">
+                <div class="icon icon-andr">
+                  <img src="./public/imgs/iconAndr.png" alt="">
+                </div>
+                <span>Android</span>扫描下载
+              </div>
+              <div class="btn-andr">
+                <img src="./public/imgs/iconAndr.png" alt="">
+                <span>Android</span> 下载
+              </div>
             </div>
-          </div>
-          <div class="down-btn">
-            <div class="btn-ios"></div>
-            <div class="btn-andr"></div>
           </div>
         </div>
         <div class="phoneImg">
-          <!-- <img src="./public/imgs/phonebg.png" alt="shouji"> -->
+          <img src="./public/imgs/phonebg.png" alt="shouji">
         </div>
       </div>
     </div>
