--- a/dnwsite/index.html
+++ b/dnwsite/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="keywords" content="视生活官网,视生活app,视生活直播">
+  <meta name="description" content="视生活直播APP是以娱乐直播为主营业务的弹幕式直播+互动平台。视生活直播以娱乐直播为主，涵盖娱乐、游戏、综艺、教育、医疗、户外、公益、体育等多种直播内容。">
+  <title>视生活-直播、短视频社交娱乐平台</title>
   <link rel="stylesheet" href="./public/common.css">
   <link rel="stylesheet" href="./public/index.css">
 </head>
@@ -15,21 +18,24 @@
       </div>
       <ul class="pagelist">
         <li>
-          <a href="#">首页</a>
+          <a href="javascript:;">首页</a>
         </li>
-        <li><a href="#">观看直播</a></li>
-        <li><a href="#">关于我们</a></li>
+        <li><a href="http://dnwonline.jyddnw.com/">观看直播</a></li>
+        <li><a href="./about.html">关于我们</a></li>
       </ul>
     </div>
     <div class="content-warp">
-      <div class="warp-area" id="warpid">
+      <div class="bglogo">
+        <img src="./public/imgs/bglogo.png" alt="">
+      </div>
+      <div class="warp-area">
         <div class="downbox">
           <div class="title">视生活APP</div>
           <div class="title-docs">带你看生活，带你看世界</div>
           <div class="rwcode">
             <div class="code">
               <div class="code-ios">
-                <img src="./public/imgs/iosCode.png" alt="ios">
+                <img src="./public/imgs/wxcode-ios.png" alt="ios">
               </div>
               <div class="code-text">
                 <div class="icon icon-ios">
@@ -37,14 +43,14 @@
                 </div>
                 <span>ios</span>扫描下载
               </div>
-              <div class="btn-ios">
+              <a class="btn-ios" href="https://apps.apple.com/cn/app/%E8%A7%86%E7%94%9F%E6%B4%BB/id1435426090">
                 <img src="./public/imgs/iconIos.png" alt="">
                 <span>ios</span> 下载
-              </div>
+              </a>
             </div>
             <div class="code ">
               <div class="code-andr">
-                <img src="./public/imgs/wxCode.png" alt="android">
+                <img src="./public/imgs/wxcode-andr.png" alt="android">
               </div>
               <div class="code-text">
                 <div class="icon icon-andr">
@@ -52,10 +58,12 @@
                 </div>
                 <span>Android</span>扫描下载
               </div>
-              <div class="btn-andr">
+              <a class="btn-andr" href="http://d.7short.com/5wck">
+              <!-- <div class="btn-andr"> -->
                 <img src="./public/imgs/iconAndr.png" alt="">
                 <span>Android</span> 下载
-              </div>
+              <!-- </div> -->
+              </a>
             </div>
           </div>
         </div>
@@ -64,6 +72,13 @@
         </div>
       </div>
     </div>
+    <footer class="footer">
+      <p>主办单位: 江苏精易达信息技术股份有限公司 客服热线： 025-85565201</p>
+      <p>江苏精易达信息技术 版权所有 苏网文（2017）5573-119号，增值业务许可证：B2-20180782 苏B2-20170478</p>
+      <p>公安部网络违法犯罪举报网站 举报热线：12318 举报邮箱：service@qiaozhifu.com</p>
+      <p><a href="http://www.beian.miit.gov.cn" target="_blank">苏ICP备17004241号-3</a> | <a href="http://dnwonline.jyddnw.com/licence/gbz.jpg" target="_blank">广播电视节目制作经营许可证</a> </p>
+      <p>Copyright © 江苏精易达信息技术 All Rights Reserved</p>
+    </footer>
   </div>
 </body>
 </html>
