--- a/dnwsite/about.html
+++ b/dnwsite/about.html
@@ -19,7 +19,7 @@
           <a href="./index.html">首页</a>
         </li>
         <li><a href="http://dnwonline.jyddnw.com/">观看直播</a></li>
-        <li><a href="javascript:;">关于我们</a></li>
+        <li class="active"><a href="javascript:;">关于我们</a></li>
       </ul>
     </div>
     <div class="content-warp">
@@ -61,9 +61,9 @@
     </div>
     <footer class="footer">
       <p>主办单位: 江苏精易达信息技术股份有限公司 客服热线： 025-85565201</p>
-      <p>江苏精易达信息技术 版权所有 苏网文（2017）5573-119号，增值业务许可证：B2-20180782 苏B2-20170478</p>
+      <p>江苏精易达信息技术 版权所有 <a href="./imgs/siteimgs/wlwh.jpg" target="_blank">苏网文（2017）5573-119号</a> | <a href="./imgs/siteimgs/zzyw1.jpg" target="_blank">增值电信业务经营许可证 B2-20180782</a> <a href="./imgs/siteimgs/zzyw2.jpg" target="_blank">苏B2-20170478</a></p>
+      <p><a href="http://www.beian.miit.gov.cn" target="_blank">苏ICP备17004241号-3</a> | <a href="http://dnwonline.jyddnw.com/licence/gbz.jpg" target="_blank">广播电视节目制作经营许可证</a> | <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=32010502010320" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="http://www.jyddnw.com/imgs/siteimgs/gaba.png" style="float:left;"/> 苏公网安备 32010502010320号</a> </p>
       <p>公安部网络违法犯罪举报网站 举报热线：12318 举报邮箱：service@qiaozhifu.com</p>
-      <p><a href="http://www.beian.miit.gov.cn" target="_blank">苏ICP备17004241号-3</a> | <a href="http://dnwonline.jyddnw.com/licence/gbz.jpg" target="_blank">广播电视节目制作经营许可证</a> </p>
       <p>Copyright © 江苏精易达信息技术 All Rights Reserved</p>
     </footer>
   </div>
