换首页适配下载展示

--- a/dnwsite/about.html
+++ b/dnwsite/about.html
@@ -35,13 +35,13 @@
           </div>
           <div class="docs">
             <p>
-              江苏精易达，互联网圈新锐力量，立志于成为全国领先的直播互动内容供应商。目前已发展成融合移动支付、大数据整合、互联网营销，直播等多领域持续发力和融合的全方位立体化的集群式互动互联网企业。精易达将秉持“精心创造，快乐未来”理念，为互联网用户带来更多精品内容，体验精彩互动生活.
+              江苏精易达，互联网圈新锐力量，立志于成为全国领先的直播互动内容供应商。目前已发展成融合移动支付、大数据整合、互联网营销，直播等多领域持续发力和融合的全方位立体化的集群式互动互联网企业。精易达将秉持“精心创造，快乐未来”理念，为互联网用户带来更多精品内容，体验精彩互动生活。 
             </p>
             <p>
-              视生活直播APP是以娱乐直播为主营业务的弹幕式直播+互动平台。视生活直播以娱乐直播为主，涵盖娱乐、游戏、综艺、教育、医疗、户外、公益、体育等多种直播内容。
+              代你玩直播APP是以娱乐直播为主营业务的弹幕式直播+互动平台。代你玩直播以娱乐直播为主，涵盖娱乐、游戏、综艺、教育、医疗、户外、公益、体育等多种直播内容。
             </p>
             <p>
-              视生活直播覆盖PC、WEB、移动三端，投入核心技术与优质资源，为用户提供超清、极速、流畅的直播观看体验，与此同时，用户还可以文字弹幕的形式与主播实时互动，享受社交互动乐趣。
+              代你玩直播覆盖PC、WEB、移动三端，投入核心技术与优质资源，为用户提供超清、极速、流畅的直播观看体验，与此同时，用户还可以文字弹幕的形式与主播实时互动，享受社交互动乐趣。
             </p>
           </div>
         </div>   
@@ -53,18 +53,29 @@
           </div>
           <div class="docs">
             <p>
-              联系电话：025-85565201
+              视生活全国商务&品牌合作
+            </p>
+            <p>
+              邮箱：jydxxjs@163.com
             </p>
           </div>
         </div>
       </div>
     </div>
-    <footer class="footer">
-      <p>主办单位: 江苏精易达信息技术股份有限公司 客服热线： 025-85565201</p>
-      <p>江苏精易达信息技术 版权所有 <a href="./imgs/siteimgs/wlwh.jpg" target="_blank">苏网文（2017）5573-119号</a> | <a href="./imgs/siteimgs/zzyw1.jpg" target="_blank">增值电信业务经营许可证 B2-20180782</a> <a href="./imgs/siteimgs/zzyw2.jpg" target="_blank">苏B2-20170478</a></p>
-      <p><a href="http://www.beian.miit.gov.cn" target="_blank">苏ICP备17004241号-3</a> | <a href="http://dnwonline.jyddnw.com/licence/gbz.jpg" target="_blank">广播电视节目制作经营许可证</a> | <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=32010502010320" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="http://www.jyddnw.com/imgs/siteimgs/gaba.png" style="float:left;"/> 苏公网安备 32010502010320号</a> </p>
-      <p>公安部网络违法犯罪举报网站 举报热线：12318 举报邮箱：service@qiaozhifu.com</p>
-      <p>Copyright © 江苏精易达信息技术 All Rights Reserved</p>
+    <footer class="footer">                       
+      <div class="item-col"><p>主办单位: 江苏精易达信息技术股份有限公司</p></div>
+      <div class="item-col">
+        <p>江苏精易达信息技术 版权所有</p>
+        <p><a href="./imgs/siteimgs/wlwh.jpg" target="_blank">苏ICP备17004241号-3苏网文（2017）5573-119号</a></p> 
+        <p><a href="./imgs/siteimgs/zzyw1.jpg" target="_blank">增值业务许可证：B2-20180782 苏B2-20170478</a> </p> 
+      </div>
+      <div class="item-col">
+        <p><a href="http://www.beian.miit.gov.cn" target="_blank">苏ICP备17004241号-3</a></p>
+        <p><a href="http://dnwonline.jyddnw.com/licence/gbz.jpg" target="_blank">广播电视节目制作经营许可证</a></p>
+        <p><a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=32010502010320" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="http://www.jyddnw.com/imgs/siteimgs/gaba.png" style="float:left;"/> 苏公网安备 32010502010320号</a></p> 
+      </div>
+      <div class="item-col">公安部网络违法犯罪举报网站 <p>举报热线：12318</p> <p>举报邮箱：service@qiaozhifu.com</p></div>
+      <div class="item-col"><p>Copyright © 江苏精易达信息技术</p> <p>All Rights Reserved</p></div>
     </footer>
   </div>
 </body>
