--- a/dnwsite/about.html
+++ b/dnwsite/about.html
@@ -14,9 +14,12 @@
       <div class="applog">
         <!-- <img src="./public/imgs/applog.png" alt=""> -->
       </div>
+      <div class="menu">
+        <div style="font-size: 2rem;" onclick="listnerMenu()">三</div>
+      </div>
       <ul class="pagelist">
-        <li>
-          <a href="./index.html">首页</a>
+        <li >
+          <a href="index.html">首页</a>
         </li>
         <li><a href="http://dnwonline.jyddnw.com/">观看直播</a></li>
         <li class="active"><a href="javascript:;">关于我们</a></li>
@@ -78,5 +81,6 @@
       <div class="item-col"><p>Copyright © 江苏精易达信息技术</p> <p>All Rights Reserved</p></div>
     </footer>
   </div>
+  <script src="index.js"></script>
 </body>
 </html>
